// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tabs Tab 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  margin: 0px;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 0px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  margin: 0px;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0px;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  margin-left: 12px;
  margin-right: 12px;
  margin-top: 3px;
  margin-bottom: 3px;
  border-bottom: solid 2px #000000;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-bottom: 6px;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  margin-left: 12px;
  margin-right: 12px;
  margin-top: 3px;
  margin-bottom: 3px;
  border-bottom: solid 2px #7D4CDB;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-bottom: 6px;
}

.c3 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  outline: none;
  font: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  color: inherit;
  border: none;
  padding: 0;
  text-align: inherit;
}

.c6 {
  font-size: 18px;
  line-height: 24px;
  color: #444444;
}

.c8 {
  font-size: 18px;
  line-height: 24px;
  color: #7D4CDB;
}

.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c4 {
  margin-left: 12px;
  margin-right: 12px;
  margin-top: 3px;
  margin-bottom: 3px;
}

.c4:hover {
  color: #000000;
}

.c9 {
  min-height: 0;
}

@media only screen and (max-width:768px) {
  .c1 {
    margin: 0px;
  }
}

@media only screen and (max-width:768px) {
  .c1 {
    padding: 0px;
  }
}

@media only screen and (max-width:768px) {
  .c2 {
    margin: 0px;
  }
}

@media only screen and (max-width:768px) {
  .c2 {
    padding: 0px;
  }
}

@media only screen and (max-width:768px) {
  .c5 {
    margin-left: 6px;
    margin-right: 6px;
  }
}

@media only screen and (max-width:768px) {
  .c5 {
    margin-top: 2px;
    margin-bottom: 2px;
  }
}

@media only screen and (max-width:768px) {
  .c5 {
    border-bottom: solid 2px #000000;
  }
}

@media only screen and (max-width:768px) {
  .c5 {
    padding-bottom: 3px;
  }
}

@media only screen and (max-width:768px) {
  .c7 {
    margin-left: 6px;
    margin-right: 6px;
  }
}

@media only screen and (max-width:768px) {
  .c7 {
    margin-top: 2px;
    margin-bottom: 2px;
  }
}

@media only screen and (max-width:768px) {
  .c7 {
    border-bottom: solid 2px #7D4CDB;
  }
}

@media only screen and (max-width:768px) {
  .c7 {
    padding-bottom: 3px;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
    role="tablist"
  >
    <div
      className="c2"
    >
      <button
        aria-expanded={true}
        aria-selected={true}
        className="c3"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
        role="tab"
        type="button"
      >
        <div
          className="c4 c5"
        >
          <span
            className="c6"
          >
            Tab 1
          </span>
        </div>
      </button>
      <button
        aria-expanded={false}
        aria-selected={false}
        className="c3"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
        role="tab"
        type="button"
      >
        <div
          className="c4 c7"
        >
          <span
            className="c8"
          >
            Tab 2
          </span>
        </div>
      </button>
    </div>
    <div
      aria-label="Tab 1 Tab Contents"
      className="c9"
      role="tabpanel"
    >
      Tab body 1
    </div>
  </div>
</div>
`;

exports[`Tabs change to second tab 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  margin: 0px;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 0px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  margin: 0px;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0px;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  margin-left: 12px;
  margin-right: 12px;
  margin-top: 3px;
  margin-bottom: 3px;
  border-bottom: solid 2px #000000;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-bottom: 6px;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  margin-left: 12px;
  margin-right: 12px;
  margin-top: 3px;
  margin-bottom: 3px;
  border-bottom: solid 2px #7D4CDB;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-bottom: 6px;
}

.c3 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  outline: none;
  font: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  color: inherit;
  border: none;
  padding: 0;
  text-align: inherit;
}

.c6 {
  font-size: 18px;
  line-height: 24px;
  color: #444444;
}

.c8 {
  font-size: 18px;
  line-height: 24px;
  color: #7D4CDB;
}

.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c4 {
  margin-left: 12px;
  margin-right: 12px;
  margin-top: 3px;
  margin-bottom: 3px;
}

.c4:hover {
  color: #000000;
}

.c9 {
  min-height: 0;
}

@media only screen and (max-width:768px) {
  .c1 {
    margin: 0px;
  }
}

@media only screen and (max-width:768px) {
  .c1 {
    padding: 0px;
  }
}

@media only screen and (max-width:768px) {
  .c2 {
    margin: 0px;
  }
}

@media only screen and (max-width:768px) {
  .c2 {
    padding: 0px;
  }
}

@media only screen and (max-width:768px) {
  .c5 {
    margin-left: 6px;
    margin-right: 6px;
  }
}

@media only screen and (max-width:768px) {
  .c5 {
    margin-top: 2px;
    margin-bottom: 2px;
  }
}

@media only screen and (max-width:768px) {
  .c5 {
    border-bottom: solid 2px #000000;
  }
}

@media only screen and (max-width:768px) {
  .c5 {
    padding-bottom: 3px;
  }
}

@media only screen and (max-width:768px) {
  .c7 {
    margin-left: 6px;
    margin-right: 6px;
  }
}

@media only screen and (max-width:768px) {
  .c7 {
    margin-top: 2px;
    margin-bottom: 2px;
  }
}

@media only screen and (max-width:768px) {
  .c7 {
    border-bottom: solid 2px #7D4CDB;
  }
}

@media only screen and (max-width:768px) {
  .c7 {
    padding-bottom: 3px;
  }
}

<div
  class="c0"
>
  <div
    class="c1"
    role="tablist"
  >
    <div
      class="c2"
    >
      <button
        aria-expanded="true"
        aria-selected="true"
        class="c3"
        role="tab"
        type="button"
      >
        <div
          class="c4 c5"
        >
          <span
            class="c6"
          >
            Tab 1
          </span>
        </div>
      </button>
      <button
        aria-expanded="false"
        aria-selected="false"
        class="c3"
        role="tab"
        type="button"
      >
        <div
          class="c4 c7"
        >
          <span
            class="c8"
          >
            Tab 2
          </span>
        </div>
      </button>
    </div>
    <div
      aria-label="Tab 1 Tab Contents"
      class="c9"
      role="tabpanel"
    >
      Tab body 1
    </div>
  </div>
</div>
`;

exports[`Tabs change to second tab 2`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 eUfLDp"
>
  <div
    class="StyledTabs-a4fwxl-2 jBsJwq StyledBox-sc-13pk1d4-0 IRSNj"
    role="tablist"
  >
    <div
      class="StyledTabs__StyledTabsHeader-a4fwxl-0 cjlqAH StyledBox-sc-13pk1d4-0 gZEJFb"
    >
      <button
        aria-expanded="false"
        aria-selected="false"
        class="StyledButton-sc-323bzc-0 jfbKsv"
        role="tab"
        type="button"
      >
        <div
          class="StyledTab-sc-1nnwnsb-0 dGMZCN StyledBox-sc-13pk1d4-0 ePEJdL"
        >
          <span
            class="StyledText-sc-1sadyjn-0 eotKNI"
          >
            Tab 1
          </span>
        </div>
      </button>
      <button
        aria-expanded="true"
        aria-selected="true"
        class="StyledButton-sc-323bzc-0 jfbKsv"
        role="tab"
        type="button"
      >
        <div
          class="StyledTab-sc-1nnwnsb-0 dGMZCN StyledBox-sc-13pk1d4-0 kvUzDk"
        >
          <span
            class="StyledText-sc-1sadyjn-0 ikIgfp"
          >
            Tab 2
          </span>
        </div>
      </button>
    </div>
    <div
      aria-label="Tab 2 Tab Contents"
      class="StyledTabs__StyledTabPanel-a4fwxl-1 lchlbl"
      role="tabpanel"
    >
      Tab body 2
    </div>
  </div>
</div>
`;

exports[`Tabs complex title 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  margin: 0px;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 0px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  margin: 0px;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0px;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  margin-left: 12px;
  margin-right: 12px;
  margin-top: 3px;
  margin-bottom: 3px;
  border-bottom: solid 2px #000000;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-bottom: 6px;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  margin-left: 12px;
  margin-right: 12px;
  margin-top: 3px;
  margin-bottom: 3px;
  border-bottom: solid 2px #7D4CDB;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-bottom: 6px;
}

.c3 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  outline: none;
  font: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  color: inherit;
  border: none;
  padding: 0;
  text-align: inherit;
}

.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c4 {
  margin-left: 12px;
  margin-right: 12px;
  margin-top: 3px;
  margin-bottom: 3px;
}

.c4:hover {
  color: #000000;
}

.c7 {
  min-height: 0;
}

@media only screen and (max-width:768px) {
  .c1 {
    margin: 0px;
  }
}

@media only screen and (max-width:768px) {
  .c1 {
    padding: 0px;
  }
}

@media only screen and (max-width:768px) {
  .c2 {
    margin: 0px;
  }
}

@media only screen and (max-width:768px) {
  .c2 {
    padding: 0px;
  }
}

@media only screen and (max-width:768px) {
  .c5 {
    margin-left: 6px;
    margin-right: 6px;
  }
}

@media only screen and (max-width:768px) {
  .c5 {
    margin-top: 2px;
    margin-bottom: 2px;
  }
}

@media only screen and (max-width:768px) {
  .c5 {
    border-bottom: solid 2px #000000;
  }
}

@media only screen and (max-width:768px) {
  .c5 {
    padding-bottom: 3px;
  }
}

@media only screen and (max-width:768px) {
  .c6 {
    margin-left: 6px;
    margin-right: 6px;
  }
}

@media only screen and (max-width:768px) {
  .c6 {
    margin-top: 2px;
    margin-bottom: 2px;
  }
}

@media only screen and (max-width:768px) {
  .c6 {
    border-bottom: solid 2px #7D4CDB;
  }
}

@media only screen and (max-width:768px) {
  .c6 {
    padding-bottom: 3px;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
    role="tablist"
  >
    <div
      className="c2"
    >
      <button
        aria-expanded={true}
        aria-selected={true}
        className="c3"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
        role="tab"
        type="button"
      >
        <div
          className="c4 c5"
        >
          <div>
            Tab 1
          </div>
        </div>
      </button>
      <button
        aria-expanded={false}
        aria-selected={false}
        className="c3"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
        role="tab"
        type="button"
      >
        <div
          className="c4 c6"
        >
          <div>
            Tab 2
          </div>
        </div>
      </button>
    </div>
    <div
      aria-label="1 Tab Contents"
      className="c7"
      role="tabpanel"
    >
      Tab body 1
    </div>
  </div>
</div>
`;

exports[`Tabs no Tab 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  margin: 0px;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 0px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  margin: 0px;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0px;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  margin-left: 12px;
  margin-right: 12px;
  margin-top: 3px;
  margin-bottom: 3px;
  border-bottom: solid 2px #000000;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-bottom: 6px;
}

.c3 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  outline: none;
  font: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  color: inherit;
  border: none;
  padding: 0;
  text-align: inherit;
}

.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c4 {
  margin-left: 12px;
  margin-right: 12px;
  margin-top: 3px;
  margin-bottom: 3px;
}

.c4:hover {
  color: #000000;
}

.c6 {
  min-height: 0;
}

@media only screen and (max-width:768px) {
  .c1 {
    margin: 0px;
  }
}

@media only screen and (max-width:768px) {
  .c1 {
    padding: 0px;
  }
}

@media only screen and (max-width:768px) {
  .c2 {
    margin: 0px;
  }
}

@media only screen and (max-width:768px) {
  .c2 {
    padding: 0px;
  }
}

@media only screen and (max-width:768px) {
  .c5 {
    margin-left: 6px;
    margin-right: 6px;
  }
}

@media only screen and (max-width:768px) {
  .c5 {
    margin-top: 2px;
    margin-bottom: 2px;
  }
}

@media only screen and (max-width:768px) {
  .c5 {
    border-bottom: solid 2px #000000;
  }
}

@media only screen and (max-width:768px) {
  .c5 {
    padding-bottom: 3px;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
    role="tablist"
  >
    <div
      className="c2"
    >
      <button
        aria-expanded={true}
        aria-selected={true}
        className="c3"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
        role="tab"
        type="button"
      >
        <div
          className="c4 c5"
        />
      </button>
    </div>
    <div
      aria-label="1 Tab Contents"
      className="c6"
      role="tabpanel"
    />
  </div>
</div>
`;

exports[`Tabs set on hover 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  margin: 0px;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 0px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  margin: 0px;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0px;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  margin-left: 12px;
  margin-right: 12px;
  margin-top: 3px;
  margin-bottom: 3px;
  border-bottom: solid 2px #000000;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-bottom: 6px;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  margin-left: 12px;
  margin-right: 12px;
  margin-top: 3px;
  margin-bottom: 3px;
  border-bottom: solid 2px #7D4CDB;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-bottom: 6px;
}

.c3 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  outline: none;
  font: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  color: inherit;
  border: none;
  padding: 0;
  text-align: inherit;
}

.c6 {
  font-size: 18px;
  line-height: 24px;
  color: #444444;
}

.c8 {
  font-size: 18px;
  line-height: 24px;
  color: #7D4CDB;
}

.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c4 {
  margin-left: 12px;
  margin-right: 12px;
  margin-top: 3px;
  margin-bottom: 3px;
}

.c4:hover {
  color: #000000;
}

.c9 {
  min-height: 0;
}

@media only screen and (max-width:768px) {
  .c1 {
    margin: 0px;
  }
}

@media only screen and (max-width:768px) {
  .c1 {
    padding: 0px;
  }
}

@media only screen and (max-width:768px) {
  .c2 {
    margin: 0px;
  }
}

@media only screen and (max-width:768px) {
  .c2 {
    padding: 0px;
  }
}

@media only screen and (max-width:768px) {
  .c5 {
    margin-left: 6px;
    margin-right: 6px;
  }
}

@media only screen and (max-width:768px) {
  .c5 {
    margin-top: 2px;
    margin-bottom: 2px;
  }
}

@media only screen and (max-width:768px) {
  .c5 {
    border-bottom: solid 2px #000000;
  }
}

@media only screen and (max-width:768px) {
  .c5 {
    padding-bottom: 3px;
  }
}

@media only screen and (max-width:768px) {
  .c7 {
    margin-left: 6px;
    margin-right: 6px;
  }
}

@media only screen and (max-width:768px) {
  .c7 {
    margin-top: 2px;
    margin-bottom: 2px;
  }
}

@media only screen and (max-width:768px) {
  .c7 {
    border-bottom: solid 2px #7D4CDB;
  }
}

@media only screen and (max-width:768px) {
  .c7 {
    padding-bottom: 3px;
  }
}

<div
  class="c0"
>
  <div
    class="c1"
    role="tablist"
  >
    <div
      class="c2"
    >
      <button
        aria-expanded="true"
        aria-selected="true"
        class="c3"
        role="tab"
        type="button"
      >
        <div
          class="c4 c5"
        >
          <span
            class="c6"
          >
            Tab 1
          </span>
        </div>
      </button>
      <button
        aria-expanded="false"
        aria-selected="false"
        class="c3"
        role="tab"
        type="button"
      >
        <div
          class="c4 c7"
        >
          <span
            class="c8"
          >
            Tab 2
          </span>
        </div>
      </button>
    </div>
    <div
      aria-label="Tab 1 Tab Contents"
      class="c9"
      role="tabpanel"
    >
      Tab body 1
    </div>
  </div>
</div>
`;

exports[`Tabs set on hover 2`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 eUfLDp"
>
  <div
    class="StyledTabs-a4fwxl-2 jBsJwq StyledBox-sc-13pk1d4-0 IRSNj"
    role="tablist"
  >
    <div
      class="StyledTabs__StyledTabsHeader-a4fwxl-0 cjlqAH StyledBox-sc-13pk1d4-0 gZEJFb"
    >
      <button
        aria-expanded="true"
        aria-selected="true"
        class="StyledButton-sc-323bzc-0 jfbKsv"
        role="tab"
        type="button"
      >
        <div
          class="StyledTab-sc-1nnwnsb-0 dGMZCN StyledBox-sc-13pk1d4-0 kvUzDk"
        >
          <span
            class="StyledText-sc-1sadyjn-0 ikIgfp"
          >
            Tab 1
          </span>
        </div>
      </button>
      <button
        aria-expanded="false"
        aria-selected="false"
        class="StyledButton-sc-323bzc-0 jfbKsv"
        role="tab"
        type="button"
      >
        <div
          class="StyledTab-sc-1nnwnsb-0 dGMZCN StyledBox-sc-13pk1d4-0 ePEJdL"
        >
          <span
            class="StyledText-sc-1sadyjn-0 eotKNI"
          >
            Tab 2
          </span>
        </div>
      </button>
    </div>
    <div
      aria-label="Tab 1 Tab Contents"
      class="StyledTabs__StyledTabPanel-a4fwxl-1 lchlbl"
      role="tabpanel"
    >
      Tab body 1
    </div>
  </div>
</div>
`;

exports[`Tabs set on hover 3`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 eUfLDp"
>
  <div
    class="StyledTabs-a4fwxl-2 jBsJwq StyledBox-sc-13pk1d4-0 IRSNj"
    role="tablist"
  >
    <div
      class="StyledTabs__StyledTabsHeader-a4fwxl-0 cjlqAH StyledBox-sc-13pk1d4-0 gZEJFb"
    >
      <button
        aria-expanded="true"
        aria-selected="true"
        class="StyledButton-sc-323bzc-0 jfbKsv"
        role="tab"
        type="button"
      >
        <div
          class="StyledTab-sc-1nnwnsb-0 dGMZCN StyledBox-sc-13pk1d4-0 kvUzDk"
        >
          <span
            class="StyledText-sc-1sadyjn-0 ikIgfp"
          >
            Tab 1
          </span>
        </div>
      </button>
      <button
        aria-expanded="false"
        aria-selected="false"
        class="StyledButton-sc-323bzc-0 jfbKsv"
        role="tab"
        type="button"
      >
        <div
          class="StyledTab-sc-1nnwnsb-0 dGMZCN StyledBox-sc-13pk1d4-0 ePEJdL"
        >
          <span
            class="StyledText-sc-1sadyjn-0 eotKNI"
          >
            Tab 2
          </span>
        </div>
      </button>
    </div>
    <div
      aria-label="Tab 1 Tab Contents"
      class="StyledTabs__StyledTabPanel-a4fwxl-1 lchlbl"
      role="tabpanel"
    >
      Tab body 1
    </div>
  </div>
</div>
`;

exports[`Tabs set on hover 4`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 eUfLDp"
>
  <div
    class="StyledTabs-a4fwxl-2 jBsJwq StyledBox-sc-13pk1d4-0 IRSNj"
    role="tablist"
  >
    <div
      class="StyledTabs__StyledTabsHeader-a4fwxl-0 cjlqAH StyledBox-sc-13pk1d4-0 gZEJFb"
    >
      <button
        aria-expanded="true"
        aria-selected="true"
        class="StyledButton-sc-323bzc-0 jfbKsv"
        role="tab"
        type="button"
      >
        <div
          class="StyledTab-sc-1nnwnsb-0 dGMZCN StyledBox-sc-13pk1d4-0 kvUzDk"
        >
          <span
            class="StyledText-sc-1sadyjn-0 ikIgfp"
          >
            Tab 1
          </span>
        </div>
      </button>
      <button
        aria-expanded="false"
        aria-selected="false"
        class="StyledButton-sc-323bzc-0 jfbKsv"
        role="tab"
        type="button"
      >
        <div
          class="StyledTab-sc-1nnwnsb-0 dGMZCN StyledBox-sc-13pk1d4-0 ePEJdL"
        >
          <span
            class="StyledText-sc-1sadyjn-0 eotKNI"
          >
            Tab 2
          </span>
        </div>
      </button>
    </div>
    <div
      aria-label="Tab 1 Tab Contents"
      class="StyledTabs__StyledTabPanel-a4fwxl-1 lchlbl"
      role="tabpanel"
    >
      Tab body 1
    </div>
  </div>
</div>
`;

exports[`Tabs set on hover 5`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 eUfLDp"
>
  <div
    class="StyledTabs-a4fwxl-2 jBsJwq StyledBox-sc-13pk1d4-0 IRSNj"
    role="tablist"
  >
    <div
      class="StyledTabs__StyledTabsHeader-a4fwxl-0 cjlqAH StyledBox-sc-13pk1d4-0 gZEJFb"
    >
      <button
        aria-expanded="true"
        aria-selected="true"
        class="StyledButton-sc-323bzc-0 jfbKsv"
        role="tab"
        type="button"
      >
        <div
          class="StyledTab-sc-1nnwnsb-0 dGMZCN StyledBox-sc-13pk1d4-0 kvUzDk"
        >
          <span
            class="StyledText-sc-1sadyjn-0 ikIgfp"
          >
            Tab 1
          </span>
        </div>
      </button>
      <button
        aria-expanded="false"
        aria-selected="false"
        class="StyledButton-sc-323bzc-0 jfbKsv"
        role="tab"
        type="button"
      >
        <div
          class="StyledTab-sc-1nnwnsb-0 dGMZCN StyledBox-sc-13pk1d4-0 ePEJdL"
        >
          <span
            class="StyledText-sc-1sadyjn-0 eotKNI"
          >
            Tab 2
          </span>
        </div>
      </button>
    </div>
    <div
      aria-label="Tab 1 Tab Contents"
      class="StyledTabs__StyledTabPanel-a4fwxl-1 lchlbl"
      role="tabpanel"
    >
      Tab body 1
    </div>
  </div>
</div>
`;
